tests/functional/cases/fail/general.coil
a: { x:1 y:2 z:3 }

b: { x: True z: False }

c.d: [1 2 3 4 'Hello']

one: a {}
two: b { y: 'Hello' }
three: c.d
